# GFX_Lab2

./: CMakeLists.txt  README.md
libs/glad/include/KHR/: khrplatform.h
libs/glad/include/glad/: glad.h
sources/: Camera.cpp  Camera.h  Gondola.cpp  Gondola.h  MyApp.cpp  Spline.cpp  Spline.h  framework.cpp  framework.h  lodepng.cpp  lodepng.h
